--- a/runner/Cargo.toml
+++ b/runner/Cargo.toml
@@ -8,8 +8,6 @@ name = "runner"
 path = "src/main.rs"
 
 [dependencies]
-sp1-core-executor = "4.1.4"
-sp1-core-machine = "4.1.4"
 sp1-prover = "4.1.4"
-sp1-sdk = { version = "4.1.4", features = ["profiling"] }
+sp1-sdk = "4.1.4"
 sp1-stark = "4.1.4"
